<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundshape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/information_text_1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/text_information_1"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_text_2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/text_information_2"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_text_3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/text_information_3"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_text_4"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/text_information_4"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_text_5"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/text_information_5"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_text_6"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text=" "
            android:textColor="#000000"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/information_text_7"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/text_information_7"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_text_8"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/text_information_8"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_text_9"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text=" "
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_text_10"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/text_information_10"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_text_11"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text=" "
            android:textColor="#000000"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/information_text_12"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text=" "
            android:textColor="#000000"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/information_text_13"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/text_information_13"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/information_text_14"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/text_information_14"
            android:textColor="#000000"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>