<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundshape">

    <TextView
        android:id="@+id/antennae_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"

        android:text="@string/identification_antennae"
        android:textColor="#404040"
        android:textStyle="bold"
        android:textSize="32sp"/>

    <ImageView

        android:id="@+id/antennae_img_small"

        android:layout_width="150dp"
        android:layout_height="150dp"

        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"

        android:src="@drawable/app_antennae_small_png"/>

    <Button
        android:id="@+id/antennae_button_1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_above="@id/antennae_img_small"

        android:padding="5dp"

        android:background="@drawable/buttonshape"

        android:text="@string/text_button_antennae_1"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/antennae_button_2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"
        android:layout_above="@id/antennae_img_small"

        android:padding="5dp"

        android:background="@drawable/buttonshape"

        android:text="@string/text_button_antennae_2"
        android:textColor="#FFFFFF"/>

    <ImageView
        android:id="@+id/antennae_img_large"

        android:layout_width="183dp"
        android:layout_height="180dp"

        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"

        android:src="@drawable/antennae_large_png"/>

    <Button
        android:id="@+id/antennae_button_error"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        android:padding="5dp"

        android:background="@drawable/buttonshape"

        android:text="@string/text_error_id_button"
        android:textColor="#FF0000"/>

</RelativeLayout>